# monitorCapture

./: CELLTimestamp.hpp  CMakeLists.txt  DXGICapture.cpp  DXGICapture.h  main.cpp  monitorCapture.cpp  monitorCapture.h  window屏幕捕获技术分享.pptx
